[package]
name = "cache-ru"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "rust cache tools base on redis"
homepage = "https://github.com/yscsky/cache-rs"
documentation = "https://github.com/yscsky/cache-rs"
repository = "https://github.com/yscsky/cache-rs"
readme = "README.md"
keywords = ["cache", "redis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.3", features = ["tokio-comp"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
